map + data interactive

--- a/phploy.ini
+++ b/phploy.ini
@@ -1,7 +1,7 @@
 #phploy
 [default]
    host = ftp.maximefondu.be
-   path = ./public_html/test/
+   path = ./public_html/projets/tfe
    port = 21
    user = maxiujmw
    pass = Gesves003
