--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postcss-uncss": "^0.17.0",
     "stimulus": "^1.1.0",
     "uncss": "^0.17.3",
+    "url-loader": "^4.0.0",
     "webpack": "^4.41.4"
   },
   "devDependencies": {
