--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "postcss-merge-rules": "^4.0.3",
     "postcss-uncss": "^0.17.0",
+    "resolve-url-loader": "^3.1.1",
     "stimulus": "^1.1.0",
     "uncss": "^0.17.3",
     "webpack": "^4.41.4"
