--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "postcss-merge-rules": "^4.0.3",
-    "postcss-uncss": "^0.17.0",
-    "resolve-url-loader": "^3.1.1",
     "stimulus": "^1.1.0",
-    "uncss": "^0.17.3",
     "webpack": "^4.41.4"
   },
   "devDependencies": {
@@ -19,6 +15,7 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "chart.js": "^2.9.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.0",
@@ -27,9 +24,12 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
+    "postcss-merge-rules": "^4.0.3",
+    "postcss-uncss": "^0.17.0",
     "sass-loader": "^8.0.0",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
+    "uncss": "^0.17.3",
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
